# drftreeview

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
app/: db.sqlite3  manage.py
app/drftreeview/: asgi.py  settings.py  urls.py  wsgi.py
app/valueset/: admin.py  apps.py  models.py
app/valueset/api/v1/: resources.py  serializers.py
app/valueset/migrations/: 0001_initial.py
compose/: entrypoint.sh  env.local.example  wait_postgres.sh
compose/web/: Dockerfile  web.sh
fixtures/: 01-superuser.json  02-valueset.json
