[tool.poetry]
name = "drftreeview"
version = "0.0.1"
description = ""
authors = ["Anatoly develop@inqana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "*"
djangorestframework = "*"
psycopg2 = "*"
django-filter = "*"
python-decouple = "*"
dj-database-url = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
